// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pre-commit calls lint-staged CLI with default args 1`] = `
Array [
  lint-staged --config ./src/config/lintstagedrc.js,
  npm run validate,
]
`;

exports[`pre-commit does not run validate script if it's not defined 1`] = `
Array [
  lint-staged --config ./src/config/lintstagedrc.js,
]
`;

exports[`pre-commit does not use built-in config with .lintstagedrc file 1`] = `
Array [
  lint-staged ,
  npm run validate,
]
`;

exports[`pre-commit does not use built-in config with --config 1`] = `
Array [
  lint-staged --config ./custom-config.js,
  npm run validate,
]
`;

exports[`pre-commit does not use built-in config with lint-staged pkg prop 1`] = `
Array [
  lint-staged ,
  npm run validate,
]
`;

exports[`pre-commit does not use built-in config with lint-staged.config.js file 1`] = `
Array [
  lint-staged ,
  npm run validate,
]
`;

exports[`pre-commit forwards args 1`] = `
Array [
  lint-staged --config ./src/config/lintstagedrc.js --verbose,
  npm run validate,
]
`;
